--- a/Type_Ahead_Search_Service/src/main/resources/application.properties
+++ b/Type_Ahead_Search_Service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/typeaheadservice
+spring.datasource.username=root
+spring.datasource.password=00H@cker
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
