--- a/Type_Ahead_Search_Service/src/main/resources/application.properties
+++ b/Type_Ahead_Search_Service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+decay_interval_in_cron_format = 0 */2 * ? * *
+enable_scheduling = true
