--- a/Type_Ahead_Search_Service/src/main/resources/application.properties
+++ b/Type_Ahead_Search_Service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/typeaheadservice
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=00H@cker
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 decay_interval_in_cron_format = 0 0 * ? * *	
